2007-10-15  Rodrigo Moya <rodrigo@gnome-db.org>

	* configure.in:
	* NEWS: prepare for 2.20.1.

2007-10-14  Jens Granseuer  <jensgr@gmx.net>

	* configure.in:
	* capplets/common/gnome-theme-info.c (gnome_theme_init): query and
	monitor the xcursor icon dir for cursor themes, too (bug #469882)

2007-10-09  Bastien Nocera  <hadess@hadess.net>

	* schemas/apps_gnome_settings_daemon_keybindings.schemas.in:
	Default to using XF86* keysyms for the audio related keybindings,
	allows those to work out-of-the-box when the right keymap is
	selected (Closes: #485076)

2007-09-28  Jens Granseuer  <jensgr@gmx.net>

	* configure.in: fix typo in order to correctly substitute XCursor CFLAGS

2007-09-26  Rodrigo Moya <rodrigo@gnome-db.org>

	* configure.in:
	* NEWS: prepare for 2.20.0.1.

2007-09-17  Rodrigo Moya <rodrigo@gnome-db.org>

	* configure.in:
	* NEWS: prepare for 2.20.0.

2007-09-04  Rodrigo Moya <rodrigo@gnome-db.org>

	* configure.in:
	* NEWS: prepare for 2.19.92.

2007-08-28  Rodrigo Moya <rodrigo@gnome-db.org>

	* configure.in:
	* NEWS: prepare for 2.19.91.

2007-08-13  Rodrigo Moya <rodrigo@gnome-db.org>

	* configure.in:
	* NEWS: prepare for 2.19.90.

2007-08-02  Rodrigo Moya <rodrigo@gnome-db.org>

	* schemas/apps_gnome_settings_daemon_keybindings.schemas.in: use
	CTRL-ALT-DEL as default keybinding for 'Log out'.

2007-07-30  Rodrigo Moya <rodrigo@gnome-db.org>

	* configure.in:
	* NEWS: prepare for 2.19.6.

2007-07-29  Jens Granseuer  <jensgr@gmx.net>

	* configure.in: remove spurious AT desktop entries (bug #444787)

2007-07-24  Thomas Wood  <thos@gnome.org>

	* configure.in: Update for recent appearance capplet re-organisation

2007-0723   Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump GTK+ requirement to 2.11.6

2007-07-19  Jens Granseuer  <jensgr@gmx.net>

	* configure.in: fix last commit when building without gstreamer

2007-07-15  Jens Granseuer  <jensgr@gmx.net>

	* capplets/Makefile.am: