@@ -1,3 +1,9 @@
+2007-10-18  Bastien Nocera  <hadess@hadess.net>
+
+	* schemas/apps_gnome_settings_daemon_keybindings.schemas.in:
+	Add more default keybindings for otherwise unbound keys
+	(Closes: #487935)
+
 2007-10-15  Rodrigo Moya <rodrigo@gnome-db.org>
 
 	* configure.in:
